// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownLink renders and anchors to left by default 1`] = `
<DropdownLink
  alwaysRenderMenu={true}
  anchorRight={false}
  caret={true}
  disabled={false}
  menuClasses=""
  onClose={[Function]}
  onOpen={[Function]}
  title="test"
  topLevelClasses="top-level-class"
>
  <DropdownMenu
    alwaysRenderMenu={true}
    closeOnEscape={true}
    keepMenuOpen={false}
    onClose={[Function]}
    onOpen={[Function]}
  >
    <span
      className="dropdown top-level-class"
    >
      <a
        className="dropdown-actor dropdown-toggle"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "outline": "none",
          }
        }
      >
        <div
          className="dropdown-actor-title"
        >
          <span>
            test
          </span>
          <i
            className="icon-arrow-down"
          />
        </div>
      </a>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div>
          1
        </div>
        <div>
          2
        </div>
      </ul>
    </span>
  </DropdownMenu>
</DropdownLink>
`;

exports[`DropdownLink renders and anchors to right 1`] = `
<DropdownLink
  alwaysRenderMenu={true}
  anchorRight={true}
  caret={true}
  disabled={false}
  menuClasses=""
  onClose={[Function]}
  onOpen={[Function]}
  title="test"
  topLevelClasses="top-level-class"
>
  <DropdownMenu
    alwaysRenderMenu={true}
    closeOnEscape={true}
    keepMenuOpen={false}
    onClose={[Function]}
    onOpen={[Function]}
  >
    <span
      className="dropdown top-level-class pull-right anchor-right"
    >
      <a
        className="dropdown-actor dropdown-menu-right dropdown-toggle"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "outline": "none",
          }
        }
      >
        <div
          className="dropdown-actor-title"
        >
          <span>
            test
          </span>
          <i
            className="icon-arrow-down"
          />
        </div>
      </a>
      <ul
        className="dropdown-menu"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div>
          1
        </div>
        <div>
          2
        </div>
      </ul>
    </span>
  </DropdownMenu>
</DropdownLink>
`;
